<resources>
    <string name="app_name">ConferenceManagement</string>
    <string name="admin">admin</string>
    <string name="doctor">doctor</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="login_failed">Login failed</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="expertise">Expertise</string>
    <string name="experience">Experience</string>
    <string name="username_can_not_be_empty">Username can not be empty</string>
    <string name="password_can_not_be_empty">Password can not be empty</string>
    <string name="expertise_can_not_be_empty">Expertise can not be empty.</string>
    <string name="experience_can_not_be_empty">Experience can not be empty.</string>
    <string name="experience_must_be_digit_only">Experience must be digit only.</string>
    <string name="conference">Conference</string>
    <string name="suggestion">Suggestion</string>
    <string name="demo">Demo</string>
    <string name="refresh">Refresh</string>
    <string name="no_data_available">No data available</string>
    <string name="topic">Topic</string>
    <string name="detail">Detail</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="invite_doctors">Invite doctors</string>
    <string name="invited_doctors">Invited doctors.</string>
    <string name="conference_saved">Conference saved.</string>
    <string name="colon">:</string>
    <string name="status">Status</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="suggested_by">Suggested by</string>
    <string name="suggestion_no">Suggestion Id</string>
    <string name="suggestion_approved">Suggestion approved</string>
    <string name="suggestion_rejected">Suggestion rejected.</string>
    <string name="conference_id">Conference Id</string>
    <string name="conference_updated">Conference updated.</string>
    <string name="conference_cancelled">Conference cancelled.</string>
    <string name="schedule">Schedule</string>
    <string name="conferences">Invites</string>
    <string name="logout">Logout</string>
    <string name="accept">Accept</string>
    <string name="invites">Invites</string>
    <string name="invite_accepted">Invite accpted</string>
    <string name="invite_rejected">Invite rejected</string>
    <string name="submit">Submit</string>
    <string name="suggestion_submitted">Suggestion submitted</string>
</resources>
